[project]
name = "hoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.11.7",
    "exoplanet-core[jax]>=0.3.1",
    "jax>=0.4.34",
    "numpyro-ext>=0.0.4",
    "numpyro>=0.15.3",
]

[tool.uv]
dev-dependencies = [
    "arviz>=0.20.0",
    "corner>=2.2.2",
    "ipykernel>=6.29.5",
    "jaxopt>=0.8.3",
    "matplotlib>=3.9.2",
    "numpyro-ext>=0.0.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tensorboard>=2.18.0",
]
